--- a/src/styles/JobCards.css
+++ b/src/styles/JobCards.css
@@ -6,11 +6,161 @@
   align-items: flex-start;
 }
 
-.card {
+.card-container {
     border: 3px solid rgb(221, 209, 209);
     border-radius: 20px;
     margin: 23px;
     height: 90vh;
     width: 370px;
-    
+    /* padding: 0 30px; */
+}
+
+.card {
+    height: 100%;
+    width: 90%;
+    margin: auto;
+}
+
+.posted-div {
+    height: 70px;
+}
+
+.posted {
+    /* height: 5vh; */
+    border: 2px solid rgb(221, 209, 209);
+    border-radius: 50px;
+    padding: 7px;
+    margin-top: 20px;
+    font-size: 10px;
+    font-weight: 300;
+    word-spacing: 2px;
+    /* margin-top: 10px;
+    margin-left: 10px; */
+    position: absolute;
+    text-align: center;
+    /* font-family: 'Lexend'; */
+    display: inline;
+}
+
+.logo-title {
+    height: 80px;
+    /* width: 50px; */
+    /* background-color: red; */
+    display: flex;
+    flex-direction: row;
+}
+
+.logo {
+    height: inherit;
+    width: 50px;
+    /* background-color: yellow; */
+}
+
+.logo img {
+    height: 100%;
+    width: 50px;
+    object-fit: cover;
+}
+
+.title {
+    margin-left: 10px;
+    height: inherit;
+    width: 273px;
+    /* background-color: yellow; */
+}
+
+.company, .role, .location {
+    padding-top: 5px;
+}
+
+.company {
+    font-size: medium;
+    font-weight: 500;
+    color: rgb(143, 140, 140);
+}
+
+.role {
+    color: rgb(59, 57, 57);
+    font-size: medium;
+    font-weight: 300;
+}
+
+.location {
+    font-size: small;
+    font-weight: 400;
+}
+
+.estimated-salary {
+    color: rgb(109, 106, 106);
+    padding: 5px;
+    font-weight: 300;
+    font-size: medium;
+}
+
+.about {
+    height: 48%;
+    width: auto;
+    /* background-color: coral; */
+}
+
+.about-us {
+    color: rgb(17, 16, 16);
+    font-weight: 500;
+    margin-top: 3px;
+}
+
+.description {
+    height: 70%;
+    margin-top: 2px;
+    /* background-color: yellow; */
+    overflow-y: hidden;
+    font-weight: 300;
+    font-size: 16px;
+    /* --webkit-mask-image: linear-gradient(to bottom, coral 50%, transparent 90%);
+    mask-image: linear-gradient(to bottom, coral 50%, transparent 100%); */
+}
+
+.view-job {
+    height: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    background: transparent;
+    backdrop-filter: blur(2px);
+    position: relative;
+    bottom: 22px;
+}
+
+.view-job div {
+    font-weight: 400;
+    color: #4943da;
+    position: absolute;
+    bottom: 20px;
+}
+
+.easy-apply, .unlock-referral {
+    height: 35px;
+    width: 100%;
+    margin: 3px;
+    border-radius: 5px;
+    border: none;
+}
+
+.min-experience {
+    color: rgb(109, 106, 106);
+}
+
+.experience-years {
+    font-weight: 300;
+    font-size: 14px;
+}
+
+.easy-apply {
+    background-color: rgb(85, 239, 196);
+    font-size: medium;
+}
+
+.unlock-referral {
+    background-color: #4943da;
+    color: white;
 }
